testdata/baselines/reference/submodule/compiler/jsdocParameterParsingInfiniteLoop.errors.txt
example.js(3,11): error TS2552: Cannot find name 'function'. Did you mean 'Function'?


==== example.js (1 errors) ====
    // @ts-check
    /**
     * @type {function(@foo)}
              ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
     */
    let x;